[package]
name = "rustkernel"
version = "0.1.0"
edition = "2021"
authors = ["Garen Tyler <garentyler@garen.dev>"]
repository = "https://github.com/garentyler/xv6-riscv"
readme = "../../README.md"
license = "LGPL-3.0-only"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }

[features]
default = ["qemu-riscv64"]
qemu-riscv64 = []
milk-v = []

[lib]
crate-type = ["staticlib"]
